==Pay per View==

1.4.2 - 2015-06-15 - Umesh Kumar
----------------------------------------------------------------------

- New: Integrated PDT (Payment Data Transfer) which allows instant payment notification for periodic pass

V1.4.1.9:
- Add day, month, year choices to Daily Pass. Changed name to Period Pass
- Add day, month, year choices to Subscriptions.

V1.4.1.8:
- Record user id if logged in for one time payments.
- Added new WPMUDEV dashboard.

V1.4.1.7:
- Added Registration link for Wordpress login
- Fixed problems with Twitter API 1.1 changes.
- New version of twitteroauth library

V1.4.1.6:
- For subscriptions the Wordpress login is always enabled now even if API is unchecked.


V1.4.1.5:
- Damaged zip in 1.4.1.4

V1.4.1.4:
- Redirect for protected area was going to the page id instead of the permalink.

V1.4.1.3:
- Fixed confirm button double press problem. Missing exit on wp_redirect.

V1.4.1.2:
- Added proper escaping to SQL
- Broke out ChangeLog.txt
- Standardized language file

V1.4.1.1:
- Transaction date fixed
- Long post titles are not creating 10001 PayPal error now

V1.4.1:
- New admin warning if default permalink structure is used
- In automatic mode, pending transactions are also accepted now. In this case admin is noticed with an email
- Fixed an issue when cookie validity time is set as zero
- Translation base file is now presented as ppw.pot

V1.4.0:
- New template function to be used for html codes, e.g. a video embed code
- More php notices fixed
- ajaxurl is now called at the correct location
- Customization Instructions has been moved to its submenu page

V1.3.0:
- Cookie validity time is now adjustable
- Display on home page with multiple posts behaviour changed
- Possibility to have a custom css file outside the plugin directory added
- Several php notices fixed
- Broken tags in Automatic method are now automatically repaired
- Now css and js files are only loaded to the related pages